update credential-protocol to use new message structure
- updates existing credential-protocol message structure,
  types, and processing
- adds threadId parameter to message model
- correlates credential messages using threadId
- adds comment parameter to rest api for credential endpoints
- updates tests and docs
